# django-query-optimization-practice

./: .dockerignore  .gitignore  ARTICLE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
books/: models.py  serializers.py  urls.py  views.py
books/management/commands/: seed_books.py
books/migrations/: 0001_initial.py
core/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: seed_users.py
users/migrations/: 0001_initial.py
