[project]
name = "django-query-optimization-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-debug-toolbar>=6.2.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "markdown>=3.10.2",
    "mimesis>=19.1.0",
    "psycopg2-binary>=2.9.11",
    "pygments>=2.19.2",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "ruff>=0.15.6",
]
